carousel play/pause

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,9 @@ body {
     min-height: 0px;
     padding: 0px;
 }
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom:0px;
+}
